# stream-service-study

./: .gitignore  README.md
docker-flink/: README.md
docker-flink/Intel/: job_manager.sh  task_manager.sh
docker-flink/linux/: job_manager.sh  task_manager.sh
docker-flink/m1/: job_manager.sh  task_manager.sh
docker-kafka/: docker-compose.yml
kafka-simple-java/: README.md
kafka-simple-java/my-kafka/: .editorconfig  .gitignore  pom.xml
kafka-simple-java/my-kafka/src/main/java/kafka/: MyKafkaConsumer.java  MyKafkaProducer.java
kafka-simple-python/: README.md  consumer.py  producer.py  pyproject.toml
local-flink/: README.md
